fix(wizard): align horizontal stepnav spacing with Figma specs
Made-with: Cursor

--- a/projects/angular/wizard/_wizard.clarity.scss
+++ b/projects/angular/wizard/_wizard.clarity.scss
@@ -527,6 +527,7 @@
     .clr-wizard-title-wrapper {
       display: flex;
       align-items: center;
+      gap: density.$clr-base-gap-s;
       padding: wizard-variables.$clr-wizard-vertical-space wizard-variables.$clr-wizard-horizontal-space;
 
       .clr-wizard-title {
@@ -560,7 +561,7 @@
 
       .clr-wizard-stepnav {
         display: flex;
-        padding: 0;
+        padding: 0 wizard-variables.$clr-wizard-horizontal-space;
         width: 100%;
       }
 
